--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF=8">
-    <title>odin-recipes</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <title>odin-recipes</title>
+    </head>
     <body>
         <h1>Odin Recipes</h1>
         <ul>
