First steps css styling

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <title>odin-recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="main-head">Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/bloody-mary.html">Bloody Mary</a></li>
-            <li><a href="recipes/strawberry-pretzel.html">Strawberry Pretzel</a></li>
+            <li><span class="li-main"><a href="recipes/lasagna.html" style="text-decoration: none;">Lasagna</a></span></li>
+            <li><span class="li-main"><a href="recipes/bloody-mary.html" style="text-decoration: none;">Bloody Mary</a></span></li>
+            <li><span class="li-main"><a href="recipes/strawberry-pretzel.html" style="text-decoration: none;">Strawberry Pretzel</a></span></li>
         </ul>
         
     </body>
