--- a/recipes/strawberry-pretzel.html
+++ b/recipes/strawberry-pretzel.html
@@ -3,35 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Strawberry Pretzel</title>
 </head>
 <body>
-    <h1>Strawberry Pretzel</h1>
-    <img src="img/strawberry-pretzel.png" alt="A Delicious Strawberry Pretzel">
+    <h1 class="recipes-head">Strawberry Pretzel</h1>
+    <img src="img/strawberry-pretzel.png" alt="A Delicious Strawberry Pretzel" class="recipes-img">
     <h2>Judy's Strawberry Pretzel</h2>
     <p>This three-layer strawberry pretzel dessert salad includes a pretzel crust, cream cheese center, and strawberry top.</p>
     <h3>Ingredients</h3>
     <ul>
-        <li>1 ½ cups crushed pretzels.</li>
-        <li>¾ cup butter, melted.</li>
-        <li>4 ½ tablespoons white sugar.</li>
-        <li>2 (8 ounce) packages cream cheese, softened.</li>
-        <li>1 cup white sugar.</li>
-        <li>1 (8 ounce) container frozen whipped topping, thawed.</li>
-        <li>2 cups boiling water.</li>
-        <li>1 (6 ounce) package strawberry flavored Jell-O.</li>
-        <li>1 (16 ounce) package frozen strawberries.</li>
+        <li class="li-recipes"><span class="recipes">1 ½ cups crushed pretzels.</span></li>
+        <li class="li-recipes"><span class="recipes">¾ cup butter, melted.</span></li>
+        <li class="li-recipes"><span class="recipes">4 ½ tablespoons white sugar.</span></li>
+        <li class="li-recipes"><span class="recipes">2 (8 ounce) packages cream cheese, softened.</span></li>
+        <li class="li-recipes"><span class="recipes">1 cup white sugar.</span></li>
+        <li class="li-recipes"><span class="recipes">1 (8 ounce) container frozen whipped topping, thawed.</span></li>
+        <li class="li-recipes"><span class="recipes">2 cups boiling water.</span></li>
+        <li class="li-recipes"><span class="recipes">1 (6 ounce) package strawberry flavored Jell-O.</span></li>
+        <li class="li-recipes"><span class="recipes">1 (16 ounce) package frozen strawberries.</span></li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li>Gather ingredients, and preheat the oven to 350 degrees F (175 degrees C).</li>
-        <li>Mix together pretzels, melted butter, and 4 1/2 tablespoons sugar in a medium bowl until well combined. Press into the bottom of a 9x13-inch dish.</li>
-        <li>Press into the bottom of a 9x13 inch pan. Bake for 10 minutes, or until lightly toasted. Set aside to cool completely.</li>
-        <li>In a medium bowl, beat the sugar and cream cheese until smooth.</li>
-        <li>Fold in whipped topping and spread evenly over the cooled crust. Refrigerate until set, about 30 minutes.</li>
-        <li>Stir together boiling water and gelatin mix in a second large bowl. Mix in frozen strawberries; stir until thawed.</li>
-        <li>Pour over cream cheese mixture in the dish. Refrigerate until completely chilled, at least 1 hour.</li>
-        <li>Refrigerate until completely chilled, at least 1 hour. Slice and enjoy!</li>
+        <li class="li-recipes"><span class="recipes">Gather ingredients, and preheat the oven to 350 degrees F (175 degrees C).</span></li>
+        <li class="li-recipes"><sapn class="recipes">Mix together pretzels, melted butter, and 4 1/2 tablespoons sugar in a medium bowl until well combined. Press into the bottom of a 9x13-inch dish.</sapn></li>
+        <li class="li-recipes"><span class="recipes">Press into the bottom of a 9x13 inch pan. Bake for 10 minutes, or until lightly toasted. Set aside to cool completely.</span></li>
+        <li class="li-recipes"><span class="recipes">In a medium bowl, beat the sugar and cream cheese until smooth.</span></li>
+        <li class="li-recipes"><span class="recipes">Fold in whipped topping and spread evenly over the cooled crust. Refrigerate until set, about 30 minutes.</span></li>
+        <li class="li-recipes"><span class="recipes">Stir together boiling water and gelatin mix in a second large bowl. Mix in frozen strawberries; stir until thawed.</span></li>
+        <li class="li-recipes"><span class="recipes">Pour over cream cheese mixture in the dish. Refrigerate until completely chilled, at least 1 hour.</span></li>
+        <li class="li-recipes"><span class="recipes">Refrigerate until completely chilled, at least 1 hour. Slice and enjoy!</span></li>
     </ol>
 </body>
 </html>
