Improvements on css styles

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <h1 class="main-head">Odin Recipes</h1>
-        <ul>
-            <li><span class="li-main"><a href="recipes/lasagna.html" style="text-decoration: none;">Lasagna</a></span></li>
-            <li><span class="li-main"><a href="recipes/bloody-mary.html" style="text-decoration: none;">Bloody Mary</a></span></li>
-            <li><span class="li-main"><a href="recipes/strawberry-pretzel.html" style="text-decoration: none;">Strawberry Pretzel</a></span></li>
+        <ul class="list-homepage">
+            <li><span class="li-main"><a class="link-main" href="recipes/lasagna.html" style="text-decoration: none;">Lasagna</a></span></li>
+            <li><span class="li-main"><a class="link-main" href="recipes/bloody-mary.html" style="text-decoration: none;">Bloody Mary</a></span></li>
+            <li><span class="li-main"><a class="link-main" href="recipes/strawberry-pretzel.html" style="text-decoration: none;">Strawberry Pretzel</a></span></li>
         </ul>
         
     </body>
