--- a/recipes/bloody-mary.html
+++ b/recipes/bloody-mary.html
@@ -10,8 +10,10 @@
     <h1 class="recipes-head">Bloody Mary</h1>
     <img src="img/bloody-mary.png" alt="A colorful and tasty Bloody Mary" class="recipes-img">
     <h2>Classic Bloody Mary</h2>
-    <p>A Bloody Mary is easy to make from scratch with vodka, tomato juice, and a few other simple ingredients. The spicy, salty, and savory taste of this classic cocktail makes it perfect for brunch or other afternoon gatherings.</p>
-    <p>If your brunch menu isn't complete without a Bloody Mary, then you're in luck because you've just found the best Bloody Mary recipe on the internet! Get ready to pile this spicy, savory cocktail high with your favorite toppings — but first, save this recipe to your collection because it's about to become your go-to.</p>
+    <span class="content">
+        <p>A Bloody Mary is easy to make from scratch with vodka, tomato juice, and a few other simple ingredients. The spicy, salty, and savory taste of this classic cocktail makes it perfect for brunch or other afternoon gatherings.</p>
+        <p>If your brunch menu isn't complete without a Bloody Mary, then you're in luck because you've just found the best Bloody Mary recipe on the internet! Get ready to pile this spicy, savory cocktail high with your favorite toppings — but first, save this recipe to your collection because it's about to become your go-to.</p>
+    </span>
     <h3>Ingredients</h3>
     <ul>
         <li class="li-recipes"><span class="recipes">1 teaspoon sea salt, or as needed.</span></li>
