--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,8 +10,10 @@
     <h1 class="recipes-head">Lasagna</h1>
     <img src="img/lasagna.png" alt="A delicious lasagna" class="recipes-img">
     <h2>Homemade Italian Lasagna</h2>
-    <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
-    <p>Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!</p>
+    <span class="content">
+        <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
+        <p>Homemade lasagna isn't as hard to make as it seems. Don't be intimidated by all the layers of delicious Italian flavor — try this homemade lasagna recipe today!</p>
+    </span>
     <h3>Ingredients</h3>
     <ul>
         <li class="li-recipes"><span class="recipes">Meat: This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef).</span></li>
