--- a/recipes/strawberry-pretzel.html
+++ b/recipes/strawberry-pretzel.html
@@ -10,7 +10,7 @@
     <h1 class="recipes-head">Strawberry Pretzel</h1>
     <img src="img/strawberry-pretzel.png" alt="A Delicious Strawberry Pretzel" class="recipes-img">
     <h2>Judy's Strawberry Pretzel</h2>
-    <p>This three-layer strawberry pretzel dessert salad includes a pretzel crust, cream cheese center, and strawberry top.</p>
+    <span class="content"><p>This three-layer strawberry pretzel dessert salad includes a pretzel crust, cream cheese center, and strawberry top.</p></span>
     <h3>Ingredients</h3>
     <ul>
         <li class="li-recipes"><span class="recipes">1 ½ cups crushed pretzels.</span></li>
